--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 altair==5.0.1
 attrs==23.1.0
 blinker==1.6.2
+boto3==1.26.154
+botocore==1.29.154
 cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
@@ -11,6 +13,7 @@ GitPython==3.1.31
 idna==3.4
 importlib-metadata==6.6.0
 Jinja2==3.1.2
+jmespath==1.0.1
 jsonschema==4.17.3
 markdown-it-py==2.2.0
 MarkupSafe==2.1.3
@@ -32,6 +35,7 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.31.0
 rich==13.4.1
 rsconnect-python==1.17.1
+s3transfer==0.6.1
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
@@ -43,6 +47,6 @@ tornado==6.3.2
 typing_extensions==4.6.3
 tzdata==2023.3
 tzlocal==4.3
-urllib3==2.0.2
+urllib3==1.26.16
 validators==0.20.0
 zipp==3.15.0
